# stencil

./: stencil.cabal
src/Data/: Bin.hs  Nat.hs
