cabal-version: 2.2
name: stencil
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fprint-explicit-kinds -fprint-explicit-foralls
  exposed-modules:
    Data.Nat
    Data.Bin.Rec
    Data.Bin.Omni
    Data.Bin.Map
    Data.Bin.Fin
    Data.Bin.Fin.N0
    Data.Bin.Fin.N1
    Data.Bin.Fin.N2
    Data.Bin.Fin.N3
